--- a/biblioteka-domowa.Server/biblioteka-domowa.Server.csproj
+++ b/biblioteka-domowa.Server/biblioteka-domowa.Server.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\biblioteka-domowa.client\biblioteka-domowa.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="..\CollectionMenager\CollectionMenager.csproj" />
   </ItemGroup>
 
 </Project>
